welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:4: error: '(' expected but identifier found.
  if num(1)>max1 {
     ^